@@ -179,6 +179,12 @@
 					<!-- Run the GWT test with the headless html unit. -->
 					<mode>htmlunit</mode>
 					<module>org.sagebionetworks.web.Portal</module>
+					<!-- GWT compiler options -->
+					<compileReport>true</compileReport>
+					<encoding>${project.build.sourceEncoding}</encoding>
+					<logLevel>INFO</logLevel>
+					<extraJvmArgs>-Xmx896M -Xms896m -XX:PermSize=64m -XX:MaxPermSize=128m</extraJvmArgs>
+<!-- 					<fragmentCount>12</fragmentCount> -->
 				</configuration>
 			</plugin>
 
